...
                    leadingIcon = Icons.Default.Person,
                    leadingIconDescription = "Person Icon",
                    testTag = "fullNameInput",
                    errorTestTag = "fullNameErrorProviderRegistration")

...
                    leadingIcon = Icons.Default.Phone,
                    leadingIconDescription = "Phone Icon",
                    testTag = "phoneNumberInput",
                    errorTestTag = "phoneNumberErrorProviderRegistration",
                    keyboardType = KeyboardType.Number)
...
                    leadingIcon = Icons.Default.Build,
                    leadingIconDescription = "Company Icon",
                    testTag = "companyNameInput",
                    errorTestTag = "companyNameErrorProviderRegistration")

...
                        Modifier.fillMaxWidth()
                            .height(60.dp)
                            .testTag("completeRegistrationButton")
                            .background(
                                if (isFormComplete) {
...
                            currentStep = 4
                          },
                          modifier = Modifier.fillMaxWidth().testTag("savePreferences2Button"),
                          colors = ButtonDefaults.buttonColors(colorScheme.secondary)) {
                            Text("Complete Registration", color = colorScheme.onSecondary)
...
                      // navigationActions.goBack() // Navigate after saving
                    },
                    modifier = Modifier.fillMaxWidth().testTag("continueDashboardButton"),
                    colors = ButtonDefaults.buttonColors(colorScheme.secondary) // Green button
                    ) {
...
            expanded = servicesExpanded,
            onExpandedChange = { servicesExpanded = !servicesExpanded },
            modifier = Modifier.testTag("servicesDropDown")) {
              OutlinedTextField(
                  value = selectedService,
...
            leadingIcon = Icons.Default.Check,
            leadingIconDescription = "Check Icon",
            testTag = "descriptionInputProviderRegistration",
            errorTestTag = "descriptionErrorInputProviderRegistration")

...
            leadingIcon = Icons.Default.Check,
            leadingIconDescription = "Check Icon",
            testTag = "startingPriceInputProviderRegistration",
            errorTestTag = "startingPriceErrorInputProviderRegistration",
            keyboardType = KeyboardType.Number)
...
            expanded = languagesExpanded,
            onExpandedChange = { languagesExpanded = !languagesExpanded },
            modifier = Modifier.testTag("languageDropdown")) {
              OutlinedTextField(
                  value =
...
            modifier =
                Modifier.fillMaxWidth()
                    .testTag("savePreferencesButton")
                    .background(
                        if (allIsOk) {
...
              .clip(RoundedCornerShape(12.dp))
              .background(Color.Transparent)
              .testTag("providerImageButton"),
      contentAlignment = Alignment.Center) {
        if (selectedImageUri == null && imageUrl == null) {
...
                color = colorScheme.onSurfaceVariant,
                modifier =
                    Modifier.testTag("uploadImage").clickable {
                      imagePickerLauncher.launch("image/*")
                    },
...
            expanded = expanded,
            onExpandedChange = { expanded = !expanded },
            modifier = Modifier.testTag("offerPackagesDropDown")) {
              OutlinedTextField(
                  value = if (providePackages.value) "Yes" else "No",
                  onValueChange = {},
                  label = { Text("Do you want to offer service Packages") },
...
          Button(
              onClick = { showDialog = true },
              modifier = Modifier.fillMaxWidth().height(60.dp).testTag("generatePackagesButton"),
              shape = RoundedCornerShape(12.dp),
              colors = ButtonDefaults.buttonColors(colorScheme.secondary) // Green button
...
          Button(
              onClick = { showForm = true },
              modifier = Modifier.fillMaxWidth().height(60.dp).testTag("enterPackagesButton"),
              shape = RoundedCornerShape(12.dp),
              colors = ButtonDefaults.buttonColors(colorScheme.secondary) // Green button
...
      modifier =
          Modifier.border(1.dp, colorScheme.onBackground, RoundedCornerShape(30.dp))
              .testTag("packageProposalDialog"),
      containerColor = colorScheme.background,
      textContentColor = colorScheme.onBackground,
...
        // Dialog Title
        Text(
            modifier = Modifier.testTag("packageProposalDialogTitle"),
            text = "Generate Packages with AI",
            style = Typography.titleLarge,
...
                      TextFieldDefaults.textFieldColors(containerColor = colorScheme.background),
                  modifier =
                      Modifier.fillMaxWidth().padding(top = 16.dp).testTag("additionalInfoInput"))
              // Select the number of packages
              ExposedDropdownMenuBox(
                  modifier = Modifier.testTag("numberOfPackagesDropDown"),
                  expanded = expanded,
                  onExpandedChange = { expanded = !expanded }) {
...
                        providerQuery = query.value)
                  },
                  modifier = Modifier.fillMaxWidth().testTag("generateButton"),
              ) {
                Text("Generate")
...
      confirmButton = {
        TextButton(
            modifier = Modifier.testTag("acceptSuggestionsButton"),
            onClick = {
              assistantPackages.value.forEach { packageProposal ->
...
      },
      dismissButton = {
        TextButton(onClick = onDismiss, Modifier.testTag("cancelButton")) { Text("Cancel") }
      })
}
...
