...
                    .verticalScroll(rememberScrollState()),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Top) {
              Image(
                  painter = painterResource(id = R.drawable.sign_up_image),
                  contentDescription = "Logo",
                  modifier = Modifier.size(250.dp).testTag("signUpIllustration"))

              ScreenTitle("Sign up", "signUpTitle")
              Spacer(modifier = Modifier.height(30.dp))

              GoogleButton(
                  onClick = {
...
                  onValueChange = { email = it },
                  label = "Email",
                  placeholder = "Enter your email",
                  isValueOk = goodFormEmail,
                  leadingIcon = Icons.Default.Email,
                  leadingIconDescription = "Email Icon",
                  testTag = "emailInputField",
                  errorMessage = "Your email must have \"@\" and \".\"",
                  errorTestTag = "emailErrorMessage")

              Spacer(modifier = Modifier.height(10.dp))

              PasswordTextField(
                  value = password,
                  onValueChange = { password = it },
                  label = "Password",
                  placeholder = "Enter your password",
                  contentDescription = "Password",
                  testTag = "passwordInputField",
                  passwordLengthComplete = passwordLengthComplete,
                  testTagErrorPassword = "passwordErrorMessage")

              Spacer(modifier = Modifier.height(10.dp))

              // Confirm Password Field
              PasswordTextField(
                  value = confirmPassword,
                  onValueChange = { confirmPassword = it },
                  label = "Confirm Password",
                  placeholder = "Re-enter your password",
                  contentDescription = "Confirm Password",
                  testTag = "confirmPasswordInputField",
                  passwordLengthComplete = (passwordLengthComplete && samePassword),
                  testTagErrorPassword = "confirmPasswordErrorMessage")

              if (!samePassword && confirmPassword.isNotEmpty() && password.isNotEmpty()) {
                Text(
                    text = "Password and Confirm Password must be the same",
...
                      } else {
                        Brush.horizontalGradient(
                            colors =
                                listOf(colorScheme.onSurfaceVariant, colorScheme.onSurfaceVariant))
                      },
                  shape = RoundedCornerShape(25.dp))
              .testTag("signUpButton"),
      shape = RoundedCornerShape(25.dp),
      colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent)) {
        Text(
            "Sign Up",
            color = colorScheme.onPrimary,
            fontWeight = FontWeight.Bold,
...
